[project]
name = "ber-data-site"
version = "0.1.0"
description = "Landing page for the BER Data GitHub organization"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-material-extensions>=1.3",
    "pymdown-extensions>=10.7",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-awesome-pages-plugin>=2.9",
    "mkdocs-rss-plugin>=1.17",
]

[tool.uv]
managed = true
